# artifacts/api-server/src/routes/index.ts
@@ -10,6 +10,7 @@ import shopProxyRouter from "./shopProxy";
 import adminRouter from "./admin";
 import pushRouter from "./push";
 import gifsRouter from "./gifs";
+import contactsRouter from "./contacts";
 
 const router: IRouter = Router();
 
@@ -24,5 +25,6 @@ router.use(shopProxyRouter);
 router.use(adminRouter);
 router.use(pushRouter);
 router.use(gifsRouter);
+router.use(contactsRouter);
 
 export default router;
