# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./conversations";
 export * from "./messages";
 export * from "./auth";
 export * from "./push";
+export * from "./contacts";
